@@ -19,9 +19,10 @@ namespace gui
 //! constructor
 CGUIButton::CGUIButton(IGUIEnvironment* environment, IGUIElement* parent,
 			s32 id, core::rect<s32> rectangle, bool noclip)
-: IGUIButton(environment, parent, id, rectangle), Pressed(false),
-	IsPushButton(false), UseAlphaChannel(false), Border(true),
-	ClickTime(0), SpriteBank(0), OverrideFont(0), Image(0), PressedImage(0)
+: IGUIButton(environment, parent, id, rectangle),
+	SpriteBank(0), OverrideFont(0), Image(0), PressedImage(0),
+	ClickTime(0), IsPushButton(false), Pressed(false),
+	UseAlphaChannel(false), DrawBorder(true), ScaleImage(false)
 {
 	#ifdef _DEBUG
 	setDebugName("CGUIButton");
@@ -55,10 +56,25 @@ CGUIButton::~CGUIButton()
 }
 
 
+//! Sets if the images should be scaled to fit the button
+void CGUIButton::setScaleImage(bool scaleImage)
+{
+	ScaleImage = scaleImage;
+}
+
+
+//! Returns whether the button scale the used images
+bool CGUIButton::isScalingImage() const
+{
+	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
+	return ScaleImage;
+}
+
+
 //! Sets if the button should use the skin to draw its border
 void CGUIButton::setDrawBorder(bool border)
 {
-	Border = border;
+	DrawBorder = border;
 }
 
 
@@ -208,29 +224,26 @@ void CGUIButton::draw()
 	IGUISkin* skin = Environment->getSkin();
 	video::IVideoDriver* driver = Environment->getVideoDriver();
 
-	IGUIFont* font = OverrideFont;
-	if (!OverrideFont)
-		font = skin->getFont(EGDF_BUTTON);
-
-	core::rect<s32> rect = AbsoluteRect;
-
 	// todo:	move sprite up and text down if the pressed state has a sprite
 	//			draw sprites for focused and mouse-over
-	core::position2di spritePos = AbsoluteRect.getCenter();
+	const core::position2di spritePos = AbsoluteRect.getCenter();
 
 	if (!Pressed)
 	{
-		if (Border)
-			skin->draw3DButtonPaneStandard(this, rect, &AbsoluteClippingRect);
+		if (DrawBorder)
+			skin->draw3DButtonPaneStandard(this, AbsoluteRect, &AbsoluteClippingRect);
 
 		if (Image)
 		{
-			core::position2d<s32> pos = AbsoluteRect.getCenter();
+			core::position2d<s32> pos = spritePos;
 			pos.X -= ImageRect.getWidth() / 2;
 			pos.Y -= ImageRect.getHeight() / 2;
 
-			driver->draw2DImage(Image, pos, ImageRect, &AbsoluteClippingRect,
-				video::SColor(255,255,255,255), UseAlphaChannel);
+			driver->draw2DImage(Image,
+					ScaleImage? AbsoluteRect :
+						core::recti(pos, ImageRect.getSize()),
+					ImageRect, &AbsoluteClippingRect,
+					0, UseAlphaChannel);
 		}
 		if (SpriteBank && ButtonSprites[EGBS_BUTTON_UP].Index != -1)
 		{
@@ -242,12 +255,12 @@ void CGUIButton::draw()
 	}
 	else
 	{
-		if (Border)
-			skin->draw3DButtonPanePressed(this, rect, &AbsoluteClippingRect);
+		if (DrawBorder)
+			skin->draw3DButtonPanePressed(this, AbsoluteRect, &AbsoluteClippingRect);
 
 		if (PressedImage)
 		{
-			core::position2d<s32> pos = AbsoluteRect.getCenter();
+			core::position2d<s32> pos = spritePos;
 			pos.X -= PressedImageRect.getWidth() / 2;
 			pos.Y -= PressedImageRect.getHeight() / 2;
 			// patch by Alan Tyndall/Jonas Petersen
@@ -256,8 +269,11 @@ void CGUIButton::draw()
 				pos.X += 1;
 				pos.Y += 1;
 			}
-			driver->draw2DImage(PressedImage, pos, PressedImageRect, &AbsoluteClippingRect,
-				video::SColor(255,255,255,255), UseAlphaChannel);
+			driver->draw2DImage(PressedImage,
+					ScaleImage? AbsoluteRect :
+						core::recti(pos, PressedImageRect.getSize()),
+					PressedImageRect, &AbsoluteClippingRect,
+					0, UseAlphaChannel);
 		}
 
 		if (SpriteBank && ButtonSprites[EGBS_BUTTON_DOWN].Index != -1)
@@ -267,12 +283,15 @@ void CGUIButton::draw()
 				&AbsoluteClippingRect, ButtonSprites[EGBS_BUTTON_DOWN].Color, ClickTime, os::Timer::getTime(),
 				ButtonSprites[EGBS_BUTTON_DOWN].Loop, true);
 		}
-
 	}
 
 	if (Text.size())
 	{
-		rect = AbsoluteRect;
+		IGUIFont* font = OverrideFont;
+		if (!OverrideFont)
+			font = skin->getFont(EGDF_BUTTON);
+
+		core::rect<s32> rect = AbsoluteRect;
 		if (Pressed)
 			rect.UpperLeftCorner.Y += 2;
 
@@ -404,7 +423,7 @@ bool CGUIButton::isAlphaChannelUsed() const
 bool CGUIButton::isDrawingBorder() const
 {
 	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
-	return Border;
+	return DrawBorder;
 }
 
 
@@ -422,8 +441,9 @@ void CGUIButton::serializeAttributes(io::IAttributes* out, io::SAttributeReadWri
 	out->addTexture	("PressedImage",	PressedImage);
 	out->addRect	("PressedImageRect",	PressedImageRect);
 
-	out->addBool	("Border",		Border);
-	out->addBool	("UseAlphaChannel",	UseAlphaChannel);
+	out->addBool	("UseAlphaChannel",	isAlphaChannelUsed());
+	out->addBool	("Border",		isDrawingBorder());
+	out->addBool	("ScaleImage",		isScalingImage());
 
 	//   out->addString  ("OverrideFont",	OverrideFont);
 }
@@ -450,7 +470,8 @@ void CGUIButton::deserializeAttributes(io::IAttributes* in, io::SAttributeReadWr
 		setPressedImage( in->getAttributeAsTexture("PressedImage") );
 
 	setDrawBorder(in->getAttributeAsBool("Border"));
-	UseAlphaChannel = in->getAttributeAsBool("UseAlphaChannel");
+	setUseAlphaChannel(in->getAttributeAsBool("UseAlphaChannel"));
+	setScaleImage(in->getAttributeAsBool("ScaleImage"));
 
 	//   setOverrideFont(in->getAttributeAsString("OverrideFont"));
 
